WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152845
[mips] Implemented missing branch patching methods.
https://bugs.webkit.org/show_bug.cgi?id=152845
Summary
[mips] Implemented missing branch patching methods.
Konstantin Tokarev
Reported
2016-01-07 12:21:25 PST
Added stub implementations for canJumpReplacePatchableBranch32WithPatch, startOfPatchableBranch32WithPatchOnAddress, and revertJumpReplacementToPatchableBranch32WithPatch
Attachments
Patch
(2.10 KB, patch)
2016-01-07 12:26 PST
,
Konstantin Tokarev
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Konstantin Tokarev
Comment 1
2016-01-07 12:26:56 PST
Created
attachment 268475
[details]
Patch
Michael Saboff
Comment 2
2016-01-07 12:29:19 PST
Comment on
attachment 268475
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2016-01-07 13:17:18 PST
Comment on
attachment 268475
[details]
Patch Clearing flags on attachment: 268475 Committed
r194715
: <
http://trac.webkit.org/changeset/194715
>
WebKit Commit Bot
Comment 4
2016-01-07 13:17:21 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug