[mips] Implemented missing branch patching methods. https://bugs.webkit.org/show_bug.cgi?id=152845

Patch by Konstantin Tokarev <annulen@yandex.ru> on 2016-01-07
Reviewed by Michael Saboff.

* assembler/MacroAssemblerMIPS.h:
(JSC::MacroAssemblerMIPS::canJumpReplacePatchableBranch32WithPatch):
(JSC::MacroAssemblerMIPS::startOfPatchableBranch32WithPatchOnAddress):
(JSC::MacroAssemblerMIPS::revertJumpReplacementToPatchableBranch32WithPatch):

Canonical link: https://commits.webkit.org/170935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194715 268f45cc-cd09-0410-ab3c-d52691b4dbfc